--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Our Services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <p>Expert IT Services, Designed for Success</p>
           </div>
         </div>
       </div>
@@ -103,12 +103,12 @@
       <div class="top-icon-box position-relative">
         <div class="container position-relative">
           <div class="row gy-4">
-  
+      
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-design.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">Application Design</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">Omnizync</a></h4>
+                <p>Reach vast audiences effortlessly with an efficient and easy-to-use Bulk SMS solution platform.</p>
               </div>
             </div>
             <!--End Icon Box -->
@@ -116,8 +116,8 @@
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-hosting.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">Web Hosting</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">CDP - Customer Data Platform</a></h4>
+                <p>Leverage our efficient and user-friendly Customer Data Platform (CDP) to connect with customers and enhance engagement seamlessly.</p>
               </div>
             </div>
             <!--End Icon Box -->
@@ -125,8 +125,8 @@
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">Social Media</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
+                <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
               </div>
             </div>
             <!--End Icon Box -->
@@ -134,8 +134,9 @@
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-seo.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">SEO Optimization</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">AdStudio</a></h4>
+                <p>
+                  We offer a platform where ad space buyers and sellers have greater control over their advertising strategies and can target specific audiences effectively.</p>
               </div>
             </div>
             <!--End Icon Box -->
@@ -144,8 +145,8 @@
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-cloud.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">Cloud Server</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">VAS & Gaming</a></h4>
+                <p>We offer Value-Added Services (VAS) for gaming that enhance user experiences through subscription options, driving player engagement and increasing revenue.</p>
               </div>
             </div>
             <!--End Icon Box -->
@@ -154,8 +155,8 @@
             <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
               <div class="icon-box">
                 <div class="icon"><img src="assets/images/icons/service-secure.svg" alt="icon"></div>
-                <h4 class="title"><a href="" class="stretched-link">Data Secuity</a></h4>
-                <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="title"><a href="" class="stretched-link">360 Digital media Agency</a></h4>
+                <p>We are a 360 Digital Media Agency offering comprehensive solutions to enhance brands' online presence and engage their audiences across all digital channels.</p>
               </div>
             </div>
             <!--End Icon Box -->
