--- a/services.html
+++ b/services.html
@@ -243,18 +243,18 @@
                           </div>
                     </div>
                     <div class="footer-widget">
-                        <!-- <div class="footer-widget-heading">
+                        <div class="footer-widget-heading">
                             <h3>Newsletter</h3>
                         </div>
                         <div class="footer-text mb-25">
                             <p>Don't miss to subscribe to our new feeds, kindly fill the form below.</p>
                         </div>
-                        <div class="subscribe-form"> -->
-                            <!-- <form action="#">
+                        <div class="subscribe-form">
+                            <form action="#">
                                 <input type="text" placeholder="Email Address">
                                 <button><i class="bi bi-telegram"></i></button>
                             </form>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
