--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
               <p><span>Completed Projects</span> adipisci atque quia aut</p>
             </div><!-- End Stats Item -->
-            </div>
+            </div>  
             <div class="col-lg-4">
             <div class="stats-item d-flex flex-column align-items-center">
               <div class="icon circle"><img src="assets/images/icons/hours-support.svg" alt="icon"></div>
@@ -576,7 +576,10 @@
     <!--  End Counter Section  -->
 
     <!--  Clients Section  -->
-    <div id="clients" class="clients section">
+      <div class="test12s">
+
+      </div>
+    <div id="clients" class=" test back ">
       <div class="container" data-aos="zoom-out">
   
         <div class="clients-slider swiper">
@@ -602,6 +605,8 @@
       </div>
     </div>
     <!-- End Clients Section -->
+
+
 
 
     <!--  Our Team Section  -->
