--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template</title>
+  <title>Zmessenger - Digital Marketing Agency</title>
   <meta content="" name="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta name="description" content="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -592,7 +592,6 @@
             <div class="swiper-slide"><img src="assets/images/clients/client-3.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-4.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-5.png" class="img-fluid" alt=""></div>
-        
             <div class="swiper-slide"><img src="assets/images/clients/client-7.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-8.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-9.png" class="img-fluid" alt=""></div>
