--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template</title>
+  <title>Zmessenger - Digital Marketing Agency</title>
   <meta content="" name="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta name="description" content="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
