--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <p>Let’s Connect – Your Questions, Our Answers</p>
           </div>
         </div>
       </div>
@@ -109,8 +109,8 @@
                   <div class="single-contact-info-box">
                     <div class="contact-info">
                       <h6>Address:</h6>
-                      <p>11 West Town</p>
-                      <p>PBo 12345, United States</p>
+                      <p>111/15 Hunupitiya Lake Road                      </p>
+                      <p>Colombo 02</p>
                     </div>
                   </div>
                 </div>
@@ -118,8 +118,8 @@
                   <div class="single-contact-info-box">
                     <div class="contact-info">
                       <h6>Phone:</h6>
-                      <p>+1 1234 56 789</p>
-                      <p>+1 1234 56 780</p>
+                      <p>0094 11 750 8656</p>
+                      <!-- <p>+1 1234 56 780</p> -->
                     </div>
                   </div>
                 </div>
@@ -127,8 +127,8 @@
                   <div class="single-contact-info-box">
                     <div class="contact-info">
                       <h6>Email:</h6>
-                      <p>info@example.com</p>
-                      <p>email@example.com</p>
+                      <p>info@www.zmessenger.com</p>
+                      <!-- <p>email@example.com</p> -->
                     </div>
                   </div>
                 </div>
