--- a/team.html
+++ b/team.html
@@ -79,7 +79,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Our Team</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <p>Dedicated Experts, United Vision</p>
           </div>
         </div>
       </div>
@@ -104,46 +104,46 @@
           <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/images/team/team-1.jpg" class="img-fluid" alt="">
-              <h4>Jhone Bi</h4>
-              <span>Application Manager</span>
-              <div class="social">
+              <h4>JAYOMI LOKULIYANA</h4>
+              <span>Chief Executive Officer / Co Founder</span>
+              <!-- <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-              </div>
+              </div> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/images/team/team-2.jpg" class="img-fluid" alt="">
-              <h4>Sani Awesome</h4>
-              <span>Social Media</span>
-              <div class="social">
+              <h4>JANAKA RUPASINGHE</h4>
+              <span>Director / Co Founder</span>
+              <!-- <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-              </div>
+              </div> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/images/team/team-3.jpg" class="img-fluid" alt="">
-              <h4>Andrio Willi</h4>
-              <span>Content Writer</span>
-              <div class="social">
+              <h4>DUSHY THILIWASAM</h4>
+              <span>Co Founder</span>
+              <!-- <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-              </div>
+              </div> -->
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="assets/images/team/team-4.jpg" class="img-fluid" alt="">
               <h4>Afa Jonson</h4>
@@ -154,7 +154,7 @@
                 <a href=""><i class="bi bi-linkedin"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
               </div>
-            </div>
+            </div> -->
           </div><!-- End Team Member -->
 
         </div>
