--- a/faqs.html
+++ b/faqs.html
@@ -79,7 +79,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>FAQ'<script src=""></script></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <p>Your Questions, Answered Here</p>
           </div>
         </div>
       </div>
