--- a/faqs.html
+++ b/faqs.html
@@ -102,7 +102,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>FAQ's</h2>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Your Questions, Answered Here</p>
         </div>
         <div class="row gy-4">
           <div class="col-lg-12">
@@ -112,18 +112,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-1">
                     <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                    What is web domain and hosting?
+                    What types of services does Zmessenger offer?
                   </button>
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse show" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                    autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    We offer a range of digital services, including AI-based marketing, community management, digital business strategy, and content creation tailored to various digital platforms.
                   </div>
                 </div>
               </div><!-- # Faq item-->
