--- a/faqs.html
+++ b/faqs.html
@@ -78,7 +78,7 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>FAQ'<script src=""></script></h2>
+            <h2>FAQ's<script src=""></script></h2>
             <p>Your Questions, Answered Here</p>
           </div>
         </div>
@@ -127,18 +127,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-2">
                     <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                    Which server is best for websites linux or windows?
+                    What is data-driven marketing, and why is it important?
                   </button>
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                    autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    Our data-driven marketing strategy leverages customer behavior data to create personalized campaigns, ensuring more accurate targeting and better results.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -148,18 +142,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-3">
                     <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                    Google cloud or Amazon server which one is best and fast?
+                    How can Zmessenger help improve my business’s digital marketing strategy?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                    autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    Zmessenger improves your digital marketing by using consumer data to create targeted campaigns. We ensure your content reaches the right audience, boosting engagement, optimizing ad spend, and driving higher conversion rates. Detailed analytics help track performance and maximize your ROI.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -169,18 +157,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-4">
                     <span class="num"><i class="bi bi-arrow-right-circle-fill"></i></span>
-                    Why Organic SEO is important for all businesses?
+                    Can Zmessenger help manage my social media presence?
                   </button>
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-                    autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    Yes, Zmessenger offers comprehensive social media management services to elevate your brand's online presence. We handle everything from content creation and scheduling to audience engagement across all major platforms like Facebook, Instagram, LinkedIn, and Twitter. Our team crafts custom content that resonates with your audience and drives engagement.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -208,7 +190,7 @@
                             </a>
                         </div>
                         <div class="footer-text">
-                            <p>zMessenger brings innovation to ‘Digital Experience Design’ through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
+                            <p>zMessenger brings innovation to Digital Experience Design through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
                         </div>
                         <div class="footer-social-icon">
                             <span>Follow us</span>
