--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -165,11 +165,11 @@
                             </a>
                         </div>
                         <div class="footer-text">
-                            <p>zMessenger brings innovation to ‘Digital Experience Design’ through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
+                          <p>zMessenger brings innovation to Digital Experience Design through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
                         </div>
                         <div class="footer-social-icon">
                             <span>Follow us</span>
-                            < <a href="https://www.youtube.com/channel/UCkGkwZbYH088tW9N02tEikA/featured"><i class="bi bi-youtube"></i></a>
+                            <a href="https://www.youtube.com/channel/UCkGkwZbYH088tW9N02tEikA/featured"><i class="bi bi-youtube"></i></a>
                             <a href="https://web.facebook.com/zmessengerLK/?_rdc=1&_rdr"><i class="bi bi-facebook"></i></a>
                             <a href="https://www.linkedin.com/company/zmessenger/posts/?feedView=all"><i class="bi bi-linkedin"></i></a>
                             <a href="https://www.instagram.com/zmessengersl/"><i class="bi bi-instagram"></i></a>
