--- a/testimonials.html
+++ b/testimonials.html
@@ -226,7 +226,7 @@
                             </a>
                         </div>
                         <div class="footer-text">
-                            <p>zMessenger brings innovation to ‘Digital Experience Design’ through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
+                          <p>zMessenger brings innovation to Digital Experience Design through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
                         </div>
                         <div class="footer-social-icon">
                             <span>Follow us</span>
