--- a/faqs.html
+++ b/faqs.html
@@ -162,7 +162,7 @@
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Yes, Zmessenger offers comprehensive social media management services to elevate your brand's online presence. We handle everything from content creation and scheduling to audience engagement across all major platforms like Facebook, Instagram, LinkedIn, and Twitter. Our team crafts custom content that resonates with your audience and drives engagement.
+                    es, Zmessenger offers comprehensive social media management services to elevate your brand's online presence. We handle everything from content creation and scheduling to audience engagement across all major platforms like Facebook, Instagram, LinkedIn, and Twitter. Our team crafts custom content that resonates with your audience and drives engagement. 
                   </div>
                 </div>
               </div><!-- # Faq item-->
