--- a/team.html
+++ b/team.html
@@ -100,8 +100,8 @@
       <!--  Our Team Section  -->
     <section id="team" class="team sections-bg">
       <div class="container aos-init aos-animate" data-aos="fade-up">
-        <div class="row gy-4">
-          <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-3 justify-content-center align-items-center">
+          <div class="col-xl-4 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/images/team/team-1.jpg" class="img-fluid" alt="">
               <h4>JAYOMI LOKULIYANA</h4>
@@ -115,7 +115,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-4 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/images/team/team-2.jpg" class="img-fluid" alt="">
               <h4>JANAKA RUPASINGHE</h4>
@@ -129,7 +129,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-xl-4 col-md-6 d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/images/team/team-3.jpg" class="img-fluid" alt="">
               <h4>DUSHY THILIWASAM</h4>
