--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   <header id="header" class="header d-flex align-items-center sticked stikcy-menu">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/images/logo.png" alt="logo">
+        <img src="assets/images/logo2.png" alt="logo">
       </a>
       <nav id="navbar" class="navbar">
+        
         <ul>
           <li><a href="index.html" class="">Home</a></li>
           <li><a href="services.html" class="">Services</a></li>
