change the header logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="header" class="header d-flex align-items-center sticked stikcy-menu">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/images/logo2.png" alt="logo">
+        <img  id="logo" src="assets/images/logo2.png" alt="logo">
       </a>
       <nav id="navbar" class="navbar">
         
