--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="d-flex justify-content-start">
             <a href="https://www.omnizync.com/" class="btn-get-started" data-aos="fade-up" data-aos-delay="1000" style="margin-left: 20px;">Explore OmniZync</a>
             <a href="https://adstudio.cloud/" class="btn-get-started" data-aos="fade-up" data-aos-delay="1000" style="margin-left: 20px;">Discover Adstudio.cloud</a>
-            <a href="https://www.bid2win.lk/" class="btn-get-started" data-aos="fade-up" data-aos-delay="1000" style="margin-left: 20px;">Learnßß about Mobile VAS</a>
+            <a href="https://www.bid2win.lk/" class="btn-get-started" data-aos="fade-up" data-aos-delay="1000" style="margin-left: 20px;">Learn about Mobile VAS</a>
 
             
             
