--- a/faqs.html
+++ b/faqs.html
@@ -100,10 +100,10 @@
       <!--  Frequently Asked Questions Section  -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
-        <div class="section-header">
+        <!-- <div class="section-header">
           <h2>FAQ's</h2>
           <p>Your Questions, Answered Here</p>
-        </div>
+        </div> -->
         <div class="row gy-4">
           <div class="col-lg-12">
             <div class="accordion accordion-flush" id="faqlist" data-aos="fade-up" data-aos-delay="100">
