--- a/about.html
+++ b/about.html
@@ -79,7 +79,8 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <p>A Commitment to Quality and Innovation
+            </p>
           </div>
         </div>
       </div>
