new update whats new

--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template</title>
+  <title>Zmessenger - Digital Marketing Agency</title>
   <meta content="" name="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta name="description" content="Technoit - IT Solutions & Business Services Multipurpose Responsive Website Template">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,24 +44,19 @@
         <ul>
           <li><a href="index.html" class="">Home</a></li>
           <li><a href="services.html" class="">Services</a></li>
-          <li><a href="portfolio.html" class="">Portfolio</a></li>
-          <li><a href="testimonials.html" class="">Testimonials</a></li>
-          <li><a href="team.html" class="">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="about.html" class="">About</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="team.html">What's New</a></li>
+          <li><a href="faqs.html" class="">FAQ</a></li>
+          <li><a href="contact.html" class="">Contact Us</a></li>
             <ul>
-              <li><a href="about.html">About</a></li>
-              <li><a href="packages.html">Pricing</a></li>
-              <li><a href="faqs.html">FAQs</a></li>
-              <li><a href="privacy-policy.html">Terms &amp; Conditions</a></li>
-              <li><a href="privacy-policy.html">Privacy Policy</a></li>
-              <li><a href="blogs.html">Blogs</a></li>
-              <li><a href="blog-details.html">Blog Detail Page</a></li>
-            </ul>
+             
+            <!-- </ul>
           </li>
-          <li><a href="blogs.html">News</a></li>
+          <li><a href="blogs.html">News</a></li> -->
         </ul>
       </nav><!-- .navbar -->
-      <a href="contact.html" class="btn-get-started hide-on-mobile">Get Quotes</a>
+      <!-- <a href="contact.html" class="btn-get-started hide-on-mobile">Get Quotes</a> -->
       <button id="darkmode-button"><i class="bi bi-moon-fill"></i></button>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
