--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <meta content="" name="ZRTHEMES">
 
   <!-- Favicons -->
+
+
+
+
+
+
+
+
+
+  
   <link href="assets/images/favicon.png" rel="icon">
   <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -47,7 +57,7 @@
           <li><a href="services.html" class="">Services</a></li>
           <li><a href="about.html" class="">About</a></li>
           <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="team.html">Team</a></li>
+          <li><a href="team.html">What's New</a></li>
           <li><a href="faqs.html" class="">FAQ</a></li>
           <li><a href="contact.html" class="">Contact Us</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -598,7 +608,7 @@
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/images/clients/client-1.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/images/clients/client-3.png" class="img-fluid" alt=""></div>
+            <!-- <div class="swiper-slide"><img src="assets/images/clients/client-3.png" class="img-fluid" alt=""></div> -->
             <div class="swiper-slide"><img src="assets/images/clients/client-4.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-5.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/images/clients/client-7.png" class="img-fluid" alt=""></div>
