--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           <li><a href="services.html" class="">Services</a></li>
           <li><a href="about.html" class="">About</a></li>
           <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="team.html">What's New</a></li>
+          <li><a href="blogs.html">What's New</a></li>
           <li><a href="faqs.html" class="">FAQ</a></li>
           <li><a href="contact.html" class="">Contact Us</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
