--- a/faqs.html
+++ b/faqs.html
@@ -227,7 +227,7 @@
           <li><a href="services.html" class="">Services</a></li>
           <li><a href="about.html" class="">About</a></li>
           <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="team.html">What's New</a></li>
+          <li><a href="blogs.html">What's New</a></li>
           <li><a href="faqs.html" class="">FAQ</a></li>
           <li><a href="contact.html" class="">Contact Us</a></li>
                             
