--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
           background-color:#3b5998 ;
         }
         .floats li:nth-child(2){
-          background-color: #8a3ab9;
+          background-color: #cd25c4;
         }
         .floats li:nth-child(3){
           background-color:#0077b5 ;
@@ -1152,10 +1152,11 @@
     <body>
       <div class="float-wrapper">
         <ul class="floats">
-          <li><i class="fa-brands fa-facebook-f"></i></li>
-          <li><i class="fa-brands fa-instagram"></i></li>
-          <li><i class="fa-brands fa-linkedin-in"></i></li>
-          <li><i class="fa-brands fa-youtube"></i></li>    
+          <li><a href="https://web.facebook.com/zmessengerLK/?_rdc=1&_rdr" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a href="https://www.instagram.com/zmessengersl/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/zmessenger/posts/?feedView=all" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCkGkwZbYH088tW9N02tEikA/featured"><i" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          
         </ul>
       </div>
     </body>
