--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
           <div class="col-lg-4">
             <div class="stats-item d-flex flex-column align-items-center">
               <div class="icon circle"><img src="assets/images/icons/happy-clients.svg" alt="icon"></div>
-              <span data-purecounter-start="0" data-purecounter-end="100+" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
               <p><span>Happy Clients</span> All around Sri Lanka</p>
             </div><!-- End Stats Item -->
             </div>
