--- a/index.html
+++ b/index.html
@@ -982,13 +982,14 @@
                         <div class="footer-text">
                             <p>zMessenger brings innovation to Digital Experience Design through AI, Data, Technology coupled with Design Thinking and Business consultancy to help its clients think and act as digital commerce leaders. As a prominent Digital Marketing Agency in Sri Lanka.</p>
                         </div>
-                        <div class="footer-social-icon">
-                            <span>Follow us</span>
-                            < <a href="https://www.youtube.com/channel/UCkGkwZbYH088tW9N02tEikA/featured"><i class="bi bi-youtube"></i></a>
-                            <a href="https://web.facebook.com/zmessengerLK/?_rdc=1&_rdr"><i class="bi bi-facebook"></i></a>
-                            <a href="https://www.linkedin.com/company/zmessenger/posts/?feedView=all"><i class="bi bi-linkedin"></i></a>
-                            <a href="https://www.instagram.com/zmessengersl/"><i class="bi bi-instagram"></i></a>
-                        </div>
+                          <!-- <div class="footer-social-icon">
+                              <span>Follow us</span>
+                              <li><a href="https://web.facebook.com/zmessengerLK/?_rdc=1&_rdr" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                              <li><a href="https://www.instagram.com/zmessengersl/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                              <li><a href="https://www.linkedin.com/company/zmessenger/posts/?feedView=all" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                              <li><a href="https://www.youtube.com/channel/UCkGkwZbYH088tW9N02tEikA/featured"><i" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                              
+                          </div> -->
                     </div>
                 </div>
                 
