--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a href="services.html" class="">Services</a></li>
           <li><a href="about.html" class="">About</a></li>
           <li><a href="blogs.html">What's New</a></li>
-          <li><a href="faqs.html" class="">Careers</a></li>
+          <li><a href="careers.html" class="">Careers</a></li>
           <li><a href="contact.html" class="">Contact Us</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
