--- a/careers.html
+++ b/careers.html
@@ -77,8 +77,8 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>FAQ's<script src=""></script></h2>
-            <p>Your Questions, Answered Here</p>
+            <h2>Careers<script src=""></script></h2>
+            <p>YUnlock Your Potential with a Career that Inspires</p>
           </div>
         </div>
       </div>
