--- a/careers.html
+++ b/careers.html
@@ -78,7 +78,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Careers<script src=""></script></h2>
-            <p>YUnlock Your Potential with a Career that Inspires</p>
+            <p>Unlock Your Potential with a Career that Inspires</p>
           </div>
         </div>
       </div>
@@ -112,6 +112,8 @@
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
               <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
+
             </div>
           </div>
           <!--End Icon Box -->
@@ -120,6 +122,7 @@
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
               <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
           <!--End Icon Box -->
@@ -128,6 +131,25 @@
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
               <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
+            </div>
+          </div>
+          <!--End Icon Box -->
+          <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon-box">
+              <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
+              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
+              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
+            </div>
+          </div>
+          <!--End Icon Box -->
+          <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon-box">
+              <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
+              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
+              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
           <!--End Icon Box -->
